# speakrs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.gpu  README.md  docker-entrypoint.sh  justfile  pyproject.toml
.dstack/: Dockerfile.ab  ab-all.yml  ab-baseline.yml  ab-copyfix.yml  ab-nhwc.yml  benchmark-5090.yml  benchmark-5090b.yml  benchmark-avx512.yml  benchmark-cpuseg.yml  benchmark-fp16emb.yml  benchmark-fp16seg.yml  benchmark-int8.yml  benchmark.yml  dev.yml  fleet-avx512.yml  fleet.yml
adr/: 001-execution-mode-der-comparison.md  002-consolidate-cuda-modes.md
benchmarks/: README.md  aishell-4.txt  ami-ihm.txt  ami-sdm.txt  ava-avd.txt  earnings-21.txt  icsi.txt  voxconverse-dev.txt  voxconverse-test.txt
docker/: base.Dockerfile  datasets.Dockerfile  models.Dockerfile  runtime.Dockerfile
examples/: README.md  assign_transcript_speakers.rs  diarize_wav.rs  print_turns.rs  speaker_airtime.rs  support.rs
examples/support/: mod.rs
fixtures/: 3speakers_discrete_diarization_data.npy  3speakers_embeddings_data.npy  3speakers_expected.rttm  3speakers_segmentation_data.npy  3speakers_speaker_counting_data.npy  cosine_sim_expected.npy  cosine_sim_input.npy  expected.rttm  generate.py  pipeline_ahc_clusters.npy  pipeline_discrete_diarization_data.npy  pipeline_embeddings_data.npy  pipeline_expected.rttm  pipeline_hard_clusters.npy  pipeline_params.json  pipeline_plda_features.npy  pipeline_plda_phi.npy  pipeline_segmentation_data.npy  pipeline_speaker_counting_data.npy  pipeline_train_chunk_idx.npy  pipeline_train_embeddings.npy  pipeline_train_speaker_idx.npy  pipeline_vbx_gamma.npy  pipeline_vbx_pi.npy  powerset_hard_output.npy  powerset_input_logits.npy  powerset_mapping_2_1.npy  powerset_mapping_3_1.npy  powerset_mapping_3_2.npy  powerset_mapping_3_3.npy  powerset_mapping_4_1.npy  powerset_mapping_4_2.npy  powerset_mapping_4_3.npy  powerset_mapping_4_4.npy  powerset_soft_output.npy  short_discrete_diarization_data.npy  short_embeddings_data.npy  short_expected.rttm  short_segmentation_data.npy  short_speaker_counting_data.npy  (+6 more)
scripts/: benchmark_comparison.py  benchmark_der.py  benchmark_diarization.py  compare_rttm.py  convert_fp16.py  diarize_pyannote.py  download_models.py  export_models.py  extract_hf_dataset.py  fluidaudio_json_to_rttm.py  quantize_int8.py
scripts/fluidaudio-bench/: Package.swift
scripts/fluidaudio-bench/Sources/: main.swift
scripts/native_coreml/: common.py  compare_coreml.py  convert_coreml.py  export_b64_seg.py  export_new_chunks.py  pyproject.toml
scripts/pyannote-bench/: diarize.py  pyproject.toml
scripts/pyannote_rs_bench/: Cargo.toml
scripts/pyannote_rs_bench/src/: main.rs
scripts/speakerkit-bench/: Package.resolved  Package.swift
scripts/speakerkit-bench/Sources/: main.swift
src/: aggregate.rs  binarize.rs  inference.rs  lib.rs  metrics.rs  models.rs  pipeline.rs  powerset.rs  reconstruct.rs  segment.rs  utils.rs
src/clustering/: ahc.rs  mod.rs  plda.rs  vbx.rs
src/inference/: coreml.rs  embedding.rs  segmentation.rs
src/inference/embedding/: batch.rs  fbank.rs  load.rs  native.rs  paths.rs  run.rs  tail.rs
src/inference/embedding/load/: sessions.rs
src/inference/embedding/native/: loaders.rs
src/inference/segmentation/: native.rs  parallel.rs  run.rs  tensor.rs
src/pipeline/: builder.rs  chunk_embedding.rs  clustering.rs  concurrent.rs  config.rs  post_inference.rs  queued.rs  tests.rs  types.rs
src/pipeline/chunk_embedding/: gpu.rs  orchestrate.rs
src/pipeline/types/: data.rs  extract.rs
tests/: end_to_end.rs  queued.rs
tests/support/: mod.rs
xtask/: Cargo.toml  README.md  build.rs
xtask/src/: audio.rs  cargo.rs  cmd.rs  commands.rs  compare_rttm.rs  convert.rs  datasets.rs  fluidaudio.rs  lib.rs  main.rs  path.rs  python.rs  wav.rs
xtask/src/commands/: benchmark.rs  compare.rs  diarize.rs  dstack.rs  fixtures.rs  gpu.rs  mod.rs  models.rs  profile_ort_embedding.rs  profile_stages.rs  profile_support.rs
xtask/src/commands/benchmark/: compare.rs  der.rs  jobs.rs  report.rs  runner.rs  selection.rs  types.rs
xtask/src/commands/benchmark/der/: preflight.rs  run.rs  validate.rs
xtask/src/commands/benchmark/jobs/: gpu.rs  preflight.rs  run.rs
xtask/src/commands/gpu/: mod.rs  runpod.rs  vastai.rs
xtask/src/datasets/: aishell4.rs  alimeeting.rs  ami.rs  earnings21.rs  voxconverse.rs
