[workspace]
members = ["xtask"]
exclude = ["scripts/"]

[package]
name = "speakrs"
version = "0.1.0"
edition = "2024"

[features]
default = ["online"]
online = ["dep:hf-hub", "hf-hub/ureq", "hf-hub/native-tls"]
coreml = ["dep:objc2", "dep:objc2-core-ml", "dep:objc2-foundation", "dep:block2"]
cuda = ["ort/cuda"]
directml = ["ort/directml"]
tensorrt = ["ort/tensorrt"]

[dependencies]
hf-hub = { version = "0.5", optional = true, default-features = false }
ndarray = "0.17.2"
ndarray-linalg = { version = "0.18.1", features = ["openblas-static"] }
ndarray-npy = "0.10.0"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
kodama = "0.3.0"
tracing = "0.1.44"
thiserror = "2.0.18"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
block2 = { version = "0.6", optional = true }
objc2-core-ml = { version = "0.3", optional = true, features = [
    "MLModel",
    "MLMultiArray",
    "MLModelConfiguration",
    "MLDictionaryFeatureProvider",
    "MLFeatureValue",
    "MLFeatureProvider",
    "MLPredictionOptions",
    "alloc",
    "block2",
] }
objc2-foundation = { version = "0.3", optional = true, features = [
    "NSArray",
    "NSDictionary",
    "NSError",
    "NSObject",
    "NSString",
    "NSURL",
    "NSValue",
    "NSSet",
    "NSEnumerator",
    "NSObjCRuntime",
] }

[dev-dependencies]
approx = "0.5.1"
serde_json = "1"
