[project]
name = "speakrs-python"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "huggingface-hub",
    "numpy",
    "onnx",
    "onnxruntime",
    "pyannote.audio>=3.3",
    "soundfile",
    "torch>=2.6",
]

[dependency-groups]
dev = [
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
    "ruff",
    "ty",
]

[tool.uv]
package = false
