[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "xtask"

[[bin]]
name = "xtask"
path = "src/main.rs"

[[bin]]
name = "speakrs-bm"
path = "src/bin/speakrs_bm.rs"
required-features = ["cuda"]

[features]
coreml = ["speakrs/coreml"]
cuda = ["speakrs/cuda"]
load-dynamic = ["speakrs/load-dynamic", "ort/load-dynamic"]
_metrics = ["speakrs/_metrics"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
hound = "3.5.1"
mimalloc = "0.1.48"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
speakrs = { path = "..", default-features = false, features = ["_metrics"] }
tempfile = "3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ureq = { version = "3.2", features = ["json"] }
wait-timeout = "0.2"
xshell = "0.2"
